// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmBalance do not show available atoms when the user has none in the first place 1`] = `
<div
  class="balance-header"
>
  <div>
    <div
      class="values-container"
    >
      <div
        class="upper-header"
      >
        <div
          class="total-atoms"
        >
          <h3>
            Total ATOM
          </h3>
           
          <h2
            class="total-atoms__value"
          >
            
            0
          
          </h2>
        </div>
         
        <!---->
      </div>
       
      <div
        class="scroll"
      >
        <div
          class="row small-container scroll-item"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="button-container"
    >
      <tmbtn-stub
        class="send-button"
        type="secondary"
        value="Send"
      />
       
      <tmbtn-stub
        class="withdraw-rewards"
        disabled="true"
        id="withdraw-btn"
        value="Claim Rewards"
      />
    </div>
     
    <sendmodal-stub
      denoms="ATOM"
    />
     
    <modalwithdrawrewards-stub />
  </div>
</div>
`;

exports[`TmBalance show the balance header when signed in 1`] = `
<div
  class="balance-header"
>
  <div>
    <div
      class="values-container"
    >
      <div
        class="upper-header"
      >
        <div
          class="total-atoms"
        >
          <h3>
            Total ATOM
          </h3>
           
          <h2
            class="total-atoms__value"
          >
            
            3,210
          
          </h2>
        </div>
         
        <!---->
      </div>
       
      <div
        class="scroll"
      >
        <div
          class="row small-container scroll-item"
        >
          <div
            class="available-atoms"
          >
            <h3>
              Available ATOM
            </h3>
             
            <h2>
              1,230
            </h2>
          </div>
           
          <div
            class="rewards"
          >
            <h3>
              Total Rewards
            </h3>
             
            <h2>
              +1,000.45
            </h2>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="button-container"
    >
      <tmbtn-stub
        class="send-button"
        type="secondary"
        value="Send"
      />
       
      <tmbtn-stub
        class="withdraw-rewards"
        id="withdraw-btn"
        value="Claim Rewards"
      />
    </div>
     
    <sendmodal-stub
      denoms="ATOM"
    />
     
    <modalwithdrawrewards-stub />
  </div>
</div>
`;
